<resources>
    <string name="app_name">TicKats</string>
    <string name="fingerprint_screen">Fingerprint Authentication</string>
    <string name="lastname">lastname</string>
    <string name="last_name">Last Name</string>
    <string name="profilepic">profilepic</string>
    <string name="hoursworked">hoursworked</string>
    <string name="hours_worked1">Hours Worked:</string>
    <string name="hours_worked">Hours Worked:</string>
    <string name="hours">Hours</string>
    <string name="clock_in_out">Clock In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="account">Account</string>
    <string name="tickets">Tickets</string>
    <string name="contacts">Contacts</string>
    <string name="employee_id">Employee ID</string>
    <string name="log_out">Log Out</string>
    <string name="instructions">
            Place your fingertip on the fingerprint sensor to verify your identity</string>
    <string name="title_activity_account">TicKats</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
